<resources>
    <string name="app_name">Honors College App</string>
    <string name="user_name">Olivia Silence</string>

    <string name="label_main_home">Home</string>
    <string name="label_main_registered">Registered</string>
    <string name="label_event_detail">Event Details</string>
    <string name="label_myprofile">My Profile</string>
    <string name="label_settings">Settings</string>
    <string name="label_logout">Log Out</string>
    <string name="label_calendar">Calendar</string>
    <string name="label_notifs">Notifications</string>

    <string name="search_hint">Search for events by name</string>
    <string name="search">Search</string>
    <string name="search_error">We were unable to execute your search.  Please check your internet connection and try again.</string>
    <string name="info">INFO</string>
    <string name="register">Register</string>
    <string name="registered">Registered</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="action_bookmark">Register this Event</string>

</resources>