<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/main_home">

    <fragment
        android:id="@+id/main_home"
        android:name="com.example.honorscollegeapp.ui.MainHomeFragment"
        android:label="@string/label_main_home">
    </fragment>

    <fragment
        android:id="@+id/main_registered"
        android:name="com.example.honorscollegeapp.ui.MainRegisteredFragment"
        android:label="@string/label_main_registered">
    </fragment>

    <fragment
        android:id="@+id/event_detail"
        android:name="com.example.honorscollegeapp.ui.EventDetailsFragment"
        android:label="@string/label_event_detail">
    </fragment>

    <fragment
        android:id="@+id/myprofile"
        android:name="com.example.honorscollegeapp.ui.MyprofileFragment"
        android:label="@string/label_myprofile">
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.honorscollegeapp.ui.SettingsFragment"
        android:label="@string/label_settings">
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/logout"-->
<!--        android:name="com.example.honorscollegeapp.ui.LogOutFragment"-->
<!--        android:label="@string/label_logout">-->
<!--    </fragment>-->

</navigation>